Asignado el maquetado

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 </head>
 <body>
 
-<div align="center">
-	<table id="">
-		
-	</table>
+<div class="general">
+	<div class="imagen">
+		<h3>Imagen</h3>
+	</div>
+	<div class="loginCliente">
+		<h3>Login Cliente</h3>
+	</div>
+	<div class="loginUsuario">
+		<h3>Login Usuario</h3>
+	</div>
+	<div class="redes">
+		<h3>Redes</h3>
+	</div>
 </div>
 
 </body>
