--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 			<p class="display-4">Iniciar Sesión</p>
 			<div class="form-group">
 			    <label for="exampleInputEmail1">Usuario</label>
-			    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Escribe tu nombre de Usuario">
+			    <input type="text" class="form-control" id="usuario" placeholder="Escribe tu nombre de Usuario">
 			    <small id="emailHelp" class="form-text text-muted">Si aun no tienes uno debes <a href="#">registrarte.</a></small>
 			</div>
 			 <div class="form-group">
 			    <label for="exampleInputPassword1">Contraseña</label>
-			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Escribe tu contraseña">
+			    <input type="password" class="form-control" id="clave" placeholder="Escribe tu contraseña">
 			 </div>
 			 <br>
 			 <center><button type="submit" class="btn btn-primary">Ingresar</button></center>
