Mejorado el diseño del Formulario de registro de home

--- a/index.html
+++ b/index.html
@@ -48,13 +48,36 @@
 		
 	</div>
 	<div class="loginUsuario">
-		<table class="rounded table bg-secondary">
+		<table class="rounded table gradienteGrisClaro">
 			<tr>
 				<th>
 					<div class="loginCliente">
 					<form>
 			<a href="" name="registro"></a>
 			<p class="display-4 text-white"><strong>Registrarse</strong></p>
+			<div class="form-group">
+			    <label for="exampleInputEmail1" class="text-white">Tu nombre</label>
+			    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Escribe tu Nombre y Apellido" >
+			</div>
+			<div class="form-group">
+			    <label for="exampleInputEmail1" class="text-white float-left">Correo electrónico</label>
+			    <div class="float-left separadoIzquierda"><img src="img/gmail.png" width="25px"></div>
+			    <div class="float-left separadoIzquierda"><img src="img/hotmail.png" width="25px"></div>
+			    <div class="float-left separadoIzquierda"><img src="img/yahoo.png" width="25px"></div>
+			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Escribe tu correo electrónico">
+			</div>
+			<div class="form-group">
+			    <label for="exampleInputEmail1" class="text-white float-left">Número de WhatsApp</label>
+			    <div class="float-left separadoIzquierda"><img src="img/whatsapp.png" width="25px"></div>
+			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="+57 312 345 6789">
+			    <small id="emailHelp" class="form-text text-white">Este número podrá ser actualizado en caso de perdida.</a></small>
+			</div>
+			<div class="form-group">
+			    <label for="exampleInputEmail1" class="text-white float-left">Número de tu cuenta Nequi</label>
+			    <div class="float-left separadoIzquierda"><img src="img/nequi.png" width="25px"></div>
+			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="+57 312 345 6789">
+			    <small id="emailHelp" class="form-text text-white">Este número podrá ser actualizado en caso de perdida.</a></small>
+			</div>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white">Nombre de Usuario</label>
 			    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Escribe un nombre de Usuario" >
@@ -70,7 +93,7 @@
 			 <div class="form-group">
 			    <label for="exampleInputPassword1" class="text-white">Codigo de Colaborador</label>
 			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Codigo especial">
-			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas.</a></small>
+			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas. ¿No tienes un código? <a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Pertenezco a GatoTareas pero no tengo un codigo de Colaborador." class="text-warning">Comunícate con el administrador.</a></small>
 			 </div>
 			 <br>
 			 <center><button type="submit" class="btn btn-primary">Ingresar</button></center>
