Diseño del header con su respectivo Icono

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 	<meta charset="utf-8">
 	<title>Gato Tareas</title>
 </head>
-<body style="background-color:#d8d8d8;">
+<body>
 
 <div class="general">
 	<div class="header">
-		<center>
-		<p class="display-3">GatoTareas</a>
-			</center>
+		<div class="titulo">
+			<img src="img/gatoNegro.png" width="45px" class="float-left">
+			<p class="h2 text-white float-left separadoIzquierda">GatoTareas</p>
+		</div>
 	</div>
 	<div class="imagen">
 		<img src="img/homeCat.jpg" class="img-fluid" width="100%">
 	</div>
 	<div class="loginCliente">
-		<table class="rounded table table-dark">
+		<table class="rounded table table-dark gradienteGrisClaro">
 			<tr>
 				<th>
 					<div class="loginCliente">
@@ -29,7 +30,7 @@
 			<div class="form-group">
 			    <label for="exampleInputEmail1">Usuario</label>
 			    <input type="text" class="form-control" id="usuario" placeholder="Escribe tu nombre de Usuario">
-			    <small id="emailHelp" class="form-text text-muted">Si aun no tienes uno debes <a href="#registro">registrarte.</a></small>
+			    <small id="emailHelp" class="form-text text-white">Si aún no tienes uno debes <a href="#registro" class="text-light" title="Sección de Registro"><strong>registrarte.</strong></a></small>
 			</div>
 			 <div class="form-group">
 			    <label for="exampleInputPassword1">Contraseña</label>
@@ -93,7 +94,7 @@
 			 <div class="form-group">
 			    <label for="exampleInputPassword1" class="text-white">Codigo de Colaborador</label>
 			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Codigo especial">
-			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas. ¿No tienes un código? <a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Pertenezco a GatoTareas pero no tengo un codigo de Colaborador." class="text-warning">Comunícate con el administrador.</a></small>
+			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas. ¿No tienes un código? <a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Pertenezco a GatoTareas pero no tengo un codigo de Colaborador." class="text-danger" title="Enviar mensaje al Administrador">Comunícate con el administrador.</a></small>
 			 </div>
 			 <br>
 			 <center><button type="submit" class="btn btn-primary">Ingresar</button></center>
@@ -111,7 +112,7 @@
 		<div class="float-left">
 			<div class="separadoIzquierda">
 			<h1 class="display-4">Contacto Directo</h1>
-		<p class="lead">Comunícate directamente con GatoTareas<a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Quiero recibir más información sobre GatoTareas :D" class="lead"><br>enviando un mensaje de Whatsapp.</a></p>
+		<p class="lead">Comunícate directamente con GatoTareas<a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Quiero recibir más información sobre GatoTareas :D" class="lead" title="Enviar mensaje al WhatsApp empresarial de GatoTareas"><br>enviando un mensaje de Whatsapp.</a></p>
 		</div>
 		</div>
 	</div>
