--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 		<img src="img/whatsapp.png" class="img-thumbnail float-left" width="150px">
 		<div class="float-left">
 			<div class="separadoIzquierda">
+
 			<h1 class="display-4">Contacto Directo</h1>
 		<p class="lead">Comunícate directamente con GatoTareas<a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Quiero recibir más información sobre GatoTareas :D" class="lead" title="Enviar mensaje al WhatsApp empresarial de GatoTareas"><br>enviando un mensaje de Whatsapp.</a></p>
 		</div>
@@ -130,7 +131,7 @@
 
   <div class="centrado">
       <button type="submit" class="btn btn-primary">Ingresar al Sistema</button>
-    </div>
+   </div>
   </div>
 </form>
 		</div>
@@ -141,3 +142,7 @@
 
 </body>
 </html>
+
+<!-- Paleta de Colores
+	https://www.color-hex.com/color-palette/87032
+ ->
