--- a/index.html
+++ b/index.html
@@ -37,42 +37,42 @@
 			<p class="display-4 text-white"><strong>Registrarse</strong></p>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white">Tu nombre</label>
-			    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Escribe tu Nombre y Apellido" >
+			    <input type="text" class="form-control" id="nombre" placeholder="Escribe tu Nombre y Apellido">
 			</div>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white float-left">Correo electrónico</label>
 			    <div class="float-left separadoIzquierda"><img src="img/gmail.png" width="25px"></div>
 			    <div class="float-left separadoIzquierda"><img src="img/hotmail.png" width="25px"></div>
 			    <div class="float-left separadoIzquierda"><img src="img/yahoo.png" width="25px"></div>
-			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Escribe tu correo electrónico">
+			    <input type="email" class="form-control" id="correo" placeholder="Escribe tu correo electrónico">
 			</div>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white float-left">Número de WhatsApp</label>
 			    <div class="float-left separadoIzquierda"><img src="img/whatsapp.png" width="25px"></div>
-			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="+57 312 345 6789">
+			    <input type="number" class="form-control" id="whatsapp" placeholder="+57 312 345 6789">
 			    <small id="emailHelp" class="form-text text-white">Este número podrá ser actualizado en caso de perdida.</a></small>
 			</div>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white float-left">Número de tu cuenta Nequi</label>
 			    <div class="float-left separadoIzquierda"><img src="img/nequi.png" width="25px"></div>
-			    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="+57 312 345 6789">
+			    <input type="number" class="form-control" id="nequi" placeholder="+57 312 345 6789">
 			    <small id="emailHelp" class="form-text text-white">Este número podrá ser actualizado en caso de perdida.</a></small>
 			</div>
 			<div class="form-group">
 			    <label for="exampleInputEmail1" class="text-white">Nombre de Usuario</label>
-			    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Escribe un nombre de Usuario" >
+			    <input type="text" class="form-control" id="usuario" placeholder="Escribe un nombre de Usuario" >
 			    <small id="emailHelp" class="form-text text-white">La disponibilidad del nickname será verificada.</a></small>
 			</div>
 			 <div class="form-group">
 			    <label for="exampleInputPassword1" class="text-white">Escribe y repite una Contraseña</label>
-			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Escribe una Contraseña">
+			    <input type="password" class="form-control" id="clave" placeholder="Escribe una Contraseña">
 			 </div>
 			 <div class="form-group">
-			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Vuelve a escribir la contraseña">
+			    <input type="password" class="form-control" id="claveRepeat" placeholder="Vuelve a escribir la contraseña">
 			 </div>
 			 <div class="form-group">
 			    <label for="exampleInputPassword1" class="text-white">Codigo de Colaborador</label>
-			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Codigo especial">
+			    <input type="text" class="form-control" id="codigo" placeholder="Codigo especial">
 			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas. ¿No tienes un código? <a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Pertenezco a GatoTareas pero no tengo un codigo de Colaborador." class="text-danger" title="Enviar mensaje al Administrador">Comunícate con el administrador.</a></small>
 			 </div>
 			 <br>
@@ -115,7 +115,7 @@
   <div class="form-group row">
     <label for="inputEmail3" class="col-sm-2 col-form-label text-white">Usuario</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Tu nombre de Usuario">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="Tu nombre de Usuario">
     </div>
   </div>
   <div class="form-group row">
