Creada la web para el registro exitoso

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			    <small id="emailHelp" class="form-text text-white">Unicamente para trabajadores de GatoTareas. ¿No tienes un código? <a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Pertenezco a GatoTareas pero no tengo un codigo de Colaborador." class="text-danger" title="Enviar mensaje al Administrador">Comunícate con el administrador.</a></small>
 			 </div>
 			 <br>
-			 <center><button type="submit" class="btn btn-primary">Ingresar</button></center>
+			 <center><button type="submit" class="btn btn-primary">Registrarse</button></center>
 			 <br>
 			 
 		</form>
