--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<tr>
 				<th>
 					<div class="loginCliente">
-					<form action="php/verificadorDeRegistro.php" method="post">
+					<form action="php/registro/verificadorDeRegistro.php" method="post">
 			<a href="" name="registro"></a>
 			<p class="display-4 text-white"><strong>Registrarse</strong></p>
 			<div class="form-group">
@@ -111,7 +111,7 @@
       </div>
       <div class="modal-body fondoGris">
       	<div class="loginCliente">
-        <form>
+        <form method="post" action="paginaPrincipal/redireccionador.php">
   <div class="form-group row">
     <label for="inputEmail3" class="col-sm-2 col-form-label text-white">Usuario</label>
     <div class="col-sm-10">
@@ -126,7 +126,7 @@
     
   </div>
   <div class="centrado">
-    	<small id="emailHelp" class="form-text text-white text-muted">¿Olvidaste tu contraseña? Puedes intentar <a href="" title="Recuperar contraseña">recuperarla mediante tu correo.</a></small>
+    	<small id="emailHelp" class="form-text text-white text-muted">¿Olvidaste tu contraseña? Puedes intentar <a href="php/registro/recuperarClave.php" title="Recuperar contraseña">recuperarla mediante tu correo.</a></small>
     </div>
 
   <div class="centrado">
