--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
       	<div class="loginCliente">
         <form method="post" action="paginaPrincipal/redireccionador.php">
   <div class="form-group row">
-    <label for="inputEmail3" class="col-sm-2 col-form-label text-white">Usuario</label>
+    <label for="usuario" class="col-sm-2 col-form-label text-white">Usuario</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="Tu nombre de Usuario">
+      <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Tu nombre de Usuario">
     </div>
   </div>
   <div class="form-group row">
-    <label for="inputPassword3" class="col-sm-2 col-form-label text-white">Clave</label>
+    <label for="clave" class="col-sm-2 col-form-label text-white">Clave</label>
     <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Tu Contraseña">
+      <input type="password" class="form-control" id="clave" name="clave" placeholder="Tu Contraseña">
     </div>
     
   </div>
