Añadido un Footer

--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
 
   		</table>
 	</div>
-	<div class="redes">
-		<img src="img/whatsapp.png" class="img-thumbnail float-left" width="150px">
+	
+	<div class="footer">
+		<div class="redes">
+		<img src="img/whatsapp.png" class="img-thumbnail float-left" width="140px">
 		<div class="float-left">
 			<div class="separadoIzquierda">
-
-			<h1 class="display-4">Contacto Directo</h1>
-		<p class="lead">Comunícate directamente con GatoTareas<a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Quiero recibir más información sobre GatoTareas :D" class="lead" title="Enviar mensaje al WhatsApp empresarial de GatoTareas"><br>enviando un mensaje de Whatsapp.</a></p>
-		</div>
+			<h1 class="display-4 text-white">Contactanos</h1>
+			<p class="lead text-white">Comunícate directamente con GatoTareas<a href="https://api.whatsapp.com/send?phone=573507948999&text=Hola! Quiero recibir más información sobre GatoTareas :D" class="lead"><br>enviando un mensaje de Whatsapp.</a></p>
+			</div>
+			</div>
 		</div>
 	</div>
 </div>
