--- a/index.html
+++ b/index.html
@@ -24,8 +24,34 @@
 			</button>
 		</div>
 	</div>
+
 	<div class="imagen">
-		<img src="img/homeCat.jpg" class="img-fluid" width="100%">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/homeCat.jpg" alt="First slide" width="100%">
+    </div>
+    <div class="carousel-item">
+      <img src="img/gatoFeliz.jpg" alt="Second slide" width="100%">
+    </div>
+    <div class="carousel-item">
+      <img src="img/gatoSorpresa.jpg" alt="Third slide" width="100%">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Anterior</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Siguiente</span>
+  </a>
+</div>
 	</div>
 	
 	<div class="loginUsuario">
