--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/homeCat.jpg" alt="First slide" width="100%">
+      <img src="img/homeCatRecortado.jpg" alt="First slide" width="100%" max-height="600px">
     </div>
     <div class="carousel-item">
-      <img src="img/gatoFeliz.jpg" alt="Second slide" width="100%">
+      <img src="img/gatoFelizRecortado.jpg" alt="Second slide" width="100%" max-height="600px">
     </div>
     <div class="carousel-item">
-      <img src="img/gatoSorpresa.jpg" alt="Third slide" width="100%">
+      <img src="img/boredCatRecortado.jpg" alt="Third slide" width="100%" max-height="600px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
